# backuptool

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: AutoBackUp.h  File.h  HuffmanCoder.h  buf.h  crc.h  utils.h  xxtea.h
src/: AutoBackUp.cpp  File.cpp  HuffmanCoder.cpp  buf.cpp  crc.cpp  main.cpp  utils.cpp  xxtea.cpp
